<resources>
    <string name="app_name">AlfaJob</string>
    <string name="sign_in">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="description">Welcome</string>
    <string name="btn_login">Войти</string>
    <string name="don_t_have_">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sign_up">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="btn_signup">Зарегистрироваться</string>
    <string name="already_have">Уже есть аккаунт?</string>
    <string name="signin">Войти</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hr_email">iskalinov133@gmail.com</string>
    <string name="no_data_found">Нет новых данных</string>
    <string name="userEmail">user@gmail.com</string>
    <string name="btn_view">Посмотреть</string>
    <string name="btn_send">Отправить</string>
    <string name="phone_number">87474193518</string>
    <string name="btn_apply">Принять</string>
    <string name="count">0</string>
    <string name="date">Август 10,2019 at 23:24:09</string>
    <string name="message_gmail">сообщение</string>nt
    <string name="call">вызов</string>
    <string name="tab_new">НОВЫЕ</string>
    <string name="tab_applied">ПРИНЯТЫЕ</string>
    <string name="stars">Отметки "Нравится"</string>
    <string name="ok">ОК</string>
    <string name="approve">Одобрять</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="approve_question">Вы хотите одобрить? </string>
    <string name="date_date">Дата</string>
    <string name="date_today">Сегодня 18/01/2019</string>
    <string name="vacancy">Вакансия</string>
    <string name="job_title">Название вакансии</string>
    <string name="job_description">Описание вакансии</string>
    <string name="btn_save">Cохранить</string>
    <string name="btn_cancel">Отменить</string>
    <string name="add_comment">Комментировать</string>
    <string name="post">Опубликовать</string>
    <string name="title">Название</string>
    <string name="phone">Номер телефона</string>
    <string name="btn_choose">Bыбирать</string>
    <string name="btn_send_all">Отправить всем</string>
    <string name="new_password">Новый пароль</string>
    <!-- TODO: ApplyCV strings-->
    <string name="apply_cv_title">Title</string>
    <string name="apply_cv_skills">#Java#Python</string>
    <string name="apply_cv_phone">Phone number</string>
    <string name="apply_cv_addcomment">Add comment</string>

    <string name="menu_home">Главная</string>
    <string name="menu_vacancy">Вакансии</string>
    <string name="menu_settings">Настройки аккаунта</string>
    <string name="menu_approved_resumes">Одобренные резюме</string>
    <string name="menu_import_files">Import Files</string>
    <string name="menu_sign_out">Выйти</string>

    <string name="vacancy_title">UI DESIGNER</string>
    <string name="company">Company:</string>
    <string name="company_name">Alfa-Bank</string>
    <string name="posted_date">Posted:</string>
    <string name="cancel">CANCEL</string>
    <string name="publish">PUBLISH</string>
    <string name="description_vacancy">Description:</string>
    <string name="vacancy_posted_date">18/09/2019</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_cv">New</string>
    <string name="viewed_cv">View</string>
    <string name="approve_dialog">Do you want to approve?</string>
    <string name="lorem_ipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
        Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature,
        discovered the undoubtable source. Lorem Ipsum comes
        from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
        very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    </string>


    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cv_title">UI Designer</string>

</resources>
