<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_gravity="center"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/vacancy_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/company"
            android:textColor="#181717"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/posted_date"
            android:textColor="#181717"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/vacancy_posted_date"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/description_vacancy"
            android:textColor="#181717"
            android:textSize="18sp" />
        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scrollbars="vertical"
            android:fillViewport="true"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_dialog_description"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center">

        <Button
            android:id="@+id/btn_publish_dialog"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:background="@drawable/btn_view"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/publish"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_apply"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>