<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.NewVacancyActivity"
    android:background="#FB4F51">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="#D91A26"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_available_24px_outlined"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/date_date"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_date_newvacancy"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/date_today"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bcg_ll_applycv"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/vacancy"
            android:textColor="#474747"
            android:textSize="18sp" />


        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_newvacancy_jobtitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:hint="@string/job_title"
            android:background="@drawable/bcg_edit_email"
            android:fontFamily="@font/roboto"
            android:ems="13"
            android:textSize="18sp"
            android:inputType="text"
            android:padding="5dp"/>

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_newvacancy_jobdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_description"
            android:gravity="start"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bcg_edit_email"
            android:fontFamily="@font/roboto"
            android:ems="13"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:inputType="textMultiLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <Button
                android:id="@+id/btn_create_newvacancy"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:background="@drawable/btn_view"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_save"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_cancel_newvacancy"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn_apply"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_cancel"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>