<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorWhite">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_settings_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/username"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/et_settings_username"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:background="@drawable/bcg_edit_email"
            android:ems="13"
            android:hint="@string/username"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <EditText
            android:id="@+id/et_settings_email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:background="@drawable/bcg_edit_email"
            android:ems="13"
            android:layout_marginBottom="10dp"
            android:hint="@string/userEmail"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            android:padding="5dp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="320dp" />

        <EditText
            android:paddingStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/bcg_edit_email"
            android:ems="13"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="320dp" />

        <EditText
            android:id="@+id/et_settings_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bcg_edit_email"
            android:ems="13"
            android:textSize="20dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="320dp" />

        <Button
            android:id="@+id/btn_settings_save"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_save"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/btn_save"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="100dp" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_settings_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="110dp"
        android:background="@drawable/round_image"
        android:src="@drawable/avatar" />


</RelativeLayout>