<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeusercv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/bcg_card"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_homeusercv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cv_title"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_notification_homeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/new_cv"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/ll_skilss_homeuser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_skills_homeuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="left|center_vertical"
                android:src="@drawable/ic_skills" />

            <TextView
                android:id="@+id/tv_skills_homeuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_italic"
                android:gravity="left|center_vertical"
                android:text="@string/apply_cv_skills"
                android:textColor="@color/colorTextNewCV"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_star_homeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_star_24px_outlined" />

        <TextView
            android:id="@+id/tv_starcount_homeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/count"
            android:textColor="@color/colorTextNewCV"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_comment_homeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_comment_24px" />

        <TextView
            android:id="@+id/tv_commentcount_homeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/count"
            android:textColor="@color/colorTextNewCV"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_view_homeuser"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_view"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/btn_view"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</LinearLayout>