<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:layout_centerVertical="true"
    android:padding="10dp">
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bcg_linear_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/stars"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stars"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:paddingStart="5dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <Button
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_view"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_star_clciked_24px"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tv_star_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:visibility="invisible"/>

</RelativeLayout>